[project]
name = "super-octo-couscous"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "kagglehub>=0.3.12",
    "polars>=1.30.0",
    "tensorflow-data-validation>=1.16.1",
    "tensorflow-hub>=0.16.1",
    "tensorflow-text>=2.16.1",
]

[dependency-groups]
dev = [
    "jupyter>=1.1.1",
]
